--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -8,7 +8,7 @@
     <fragment
         android:id="@+id/searchFragment"
         android:name="com.example.movie.ui.search.SearchFragment"
-        android:label="fragment_search"
+        android:label="Search"
         tools:layout="@layout/fragment_search" >
         <action
             android:id="@+id/action_searchFragment_to_movieFragment"
@@ -17,7 +17,7 @@
     <fragment
         android:id="@+id/movieFragment"
         android:name="com.example.movie.ui.movie.MovieFragment"
-        android:label="fragment_movie"
+        android:label="Detail"
         tools:layout="@layout/fragment_movie" />
 
 </navigation>
