--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,5 @@
     <dimen name="dp_6">6dp</dimen>
     <dimen name="sp_20">20sp</dimen>
     <dimen name="sp_18">18sp</dimen>
+    <dimen name="sp_16">16sp</dimen>
 </resources>
